[project]
name = "langchaintraining"
version = "0.1.0"
description = "Learn AI"
authors = [
    {name = "https://github.com/eldhokurian89"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
